--- a/package.json
+++ b/package.json
@@ -5,10 +5,40 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "examples/*"
   ],
+  "scripts": {
+    "dev": "yarn workspace @graphql-stream/apollo-server-example dev"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "apollo-server": "^2.18.2",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-optional-chaining": "^7.0.0-beta.3",
+    "eslint": "^7.12.1",
+    "eslint-config-get-off-my-lawn": "^5.0.1",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "getstream": "^6.2.0",
     "graphql": "^15.4.0",
-    "graphql-tools": "^7.0.1"
+    "graphql-scalars": "^1.4.1",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tools": "^7.0.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.0",
+    "nodemon": "^2.0.6",
+    "prettier": "^2.1.2",
+    "stream-chat": "^2.7.2"
   }
 }
