--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-optional-chaining": "^7.0.0-beta.3",
+    "dataloader": "^2.0.0",
     "eslint": "^7.12.1",
     "eslint-config-get-off-my-lawn": "^5.0.1",
     "eslint-plugin-babel": "^5.3.1",
