--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@graphql-stream/feeds",
+  "name": "@graphql-stream/chat",
   "version": "0.0.0",
   "main": "src/index.js",
   "repository": "https://github.com/LukeSmetham/graphql-stream.git",
