--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
     "nodemon": "^2.0.6",
+    "phin": "^3.5.0",
     "prettier": "^2.1.2",
     "stream-chat": "^2.7.2"
   }
