--- a/examples/apollo-server-feeds/package.json
+++ b/examples/apollo-server-feeds/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "main": "src/index.js",
   "license": "MIT",
+  "private": true,
   "engines": {
     "node": ">=14.x"
   },
