--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "examples/*"
   ],
   "scripts": {
-	"dev:chat": "yarn workspace @graphql-stream/apollo-server-chat-example dev",
-	"dev:feeds": "yarn workspace @graphql-stream/apollo-server-feeds-example dev"
+    "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.spec.js",
+    "dev:chat": "yarn workspace @graphql-stream/apollo-server-chat-example dev",
+    "dev:feeds": "yarn workspace @graphql-stream/apollo-server-feeds-example dev",
+    "dev:user-events": "yarn workspace @graphql-stream/user-event-feeds dev"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -38,6 +40,7 @@
     "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^7.0.1",
     "husky": "^4.3.0",
+    "lerna": "3.5.1",
     "lint-staged": "^10.5.0",
     "nodemon": "^2.0.6",
     "phin": "^3.5.0",
