--- a/packages/feeds/package.json
+++ b/packages/feeds/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@graphql-stream/feeds",
-  "version": "0.0.0",
-  "main": "src/index.js",
+  "version": "0.1.0-alpha.1",
+  "main": "lib/index.js",
+  "module": "src/index.js",
   "repository": "https://github.com/LukeSmetham/graphql-stream.git",
   "author": "Luke Smetham <luke@smetham.dev>",
   "license": "MIT"
