--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "examples/*"
   ],
   "scripts": {
-    "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.spec.js",
+    "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore lib/**,**/*.spec.js",
     "dev:chat": "yarn workspace @graphql-stream/apollo-server-chat-example dev",
     "dev:feeds": "yarn workspace @graphql-stream/apollo-server-feeds-example dev",
     "dev:user-events": "yarn workspace @graphql-stream/user-event-feeds dev"
