--- a/packages/feeds/package.json
+++ b/packages/feeds/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@stream-io/graphql-feeds",
-  "description": "GraphQL Wrapper for the Stream Node SDK. See README for details, roadmap, how-to's, etc.",
-  "version": "0.1.0-alpha.1",
+  "description": "GraphQL Wrapper for the Stream Feeds JS SDK for Node. See README for details, roadmap, how-to's, etc.",
+  "version": "0.1.0-alpha.2",
   "main": "lib/index.js",
-  "module": "src/index.js",
   "repository": "https://github.com/LukeSmetham/graphql-stream.git",
   "author": "Luke Smetham <luke@smetham.dev>",
   "license": "MIT",
