--- a/packages/feeds/package.json
+++ b/packages/feeds/package.json
@@ -3,6 +3,7 @@
   "description": "GraphQL Wrapper for the Stream Feeds JS SDK for Node. See README for details, roadmap, how-to's, etc.",
   "version": "0.1.0-alpha.9",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "repository": "https://github.com/LukeSmetham/graphql-stream.git",
   "author": "Luke Smetham <luke@smetham.dev>",
   "license": "MIT",
