--- a/packages/feeds-compose/package.json
+++ b/packages/feeds-compose/package.json
@@ -4,13 +4,17 @@
   "version": "0.1.0",
   "main": "lib/index.js",
   "repository": {
-		"url": "https://github.com/LukeSmetham/graphql-stream.git",
-		"directory": "packages/feeds-compose"
+    "url": "https://github.com/LukeSmetham/graphql-stream.git",
+    "directory": "packages/feeds-compose"
   },
   "author": "Luke Smetham <luke@smetham.dev>",
   "license": "MIT",
   "scripts": {
-	"build": "babel --root-mode upward src -d lib --ignore lib/**,**/*.spec.js",
-	"watch": "yarn build -w"
+    "build": "babel --root-mode upward src -d lib --ignore lib/**,**/*.spec.js",
+    "watch": "yarn build -w"
+  },
+  "dependencies": {
+    "capitalize": "^2.0.3",
+    "graphql-compose": "^9.0.2"
   }
 }
