--- a/packages/feeds-compose/package.json
+++ b/packages/feeds-compose/package.json
@@ -3,6 +3,7 @@
   "description": "GraphQL Wrapper for the Stream Feeds JS SDK for Node. See README for details, roadmap, how-to's, etc.",
   "version": "0.1.0",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "repository": {
     "url": "https://github.com/LukeSmetham/graphql-stream.git",
     "directory": "packages/feeds-compose"
@@ -10,7 +11,7 @@
   "author": "Luke Smetham <luke@smetham.dev>",
   "license": "MIT",
   "scripts": {
-    "build": "babel --root-mode upward src -d lib --ignore lib/**,**/*.spec.js",
+    "build": "rm -rf lib && babel --root-mode upward src -d lib --ignore lib/**,**/*.spec.js",
     "watch": "yarn build -w"
   },
   "dependencies": {
