added support for passing multiple feed configs to composeActivityFeed to create multiple Feed & Activity types in the schema, each with their own custom fields etc.

--- a/packages/feeds-compose/package.json
+++ b/packages/feeds-compose/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "capitalize": "^2.0.3",
-    "graphql-compose": "^9.0.2"
+    "graphql-compose": "^9.0.2",
+    "lodash.castarray": "^4.4.0"
   }
 }
