--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "examples/*"
   ],
   "scripts": {
-	"build": "lerna --scope @graphql-stream/feeds exec --parallel -- yarn build",
-	"watch": "lerna --scope @graphql-stream/feeds exec --parallel -- yarn watch",
+    "build": "lerna --scope @graphql-stream/feeds exec --parallel -- yarn build",
+    "watch": "lerna --scope @graphql-stream/feeds exec --parallel -- yarn watch",
     "build:clean": "lerna exec --parallel -- rm -rf lib",
     "old:build": "yarn build:js && yarn build:graphql",
     "old:build:js": "lerna --scope @stream-io/* exec --parallel -- babel --root-mode upward src -d lib --ignore lib/**,**/*.spec.js",
     "old:build:graphql": "lerna --scope @stream-io/* exec --parallel -- rsync -r --include 'src/*' --include '*.graphql' --exclude='*.js' --exclude='*.spec.js' --prune-empty-dirs 'src/' 'lib/'",
-    "dev": "yarn workspace @examples/apollo-server dev"
+    "dev": "yarn workspace @examples/apollo-server dev",
+	"test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --maxWorkers 4",
+	"test": "yarn test:coverage"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -43,6 +46,7 @@
     "graphql-subscriptions": "^1.2.1",
     "graphql-tools": "^8.0.0",
     "husky": "^7.0.1",
+    "jest": "^27.1.0",
     "lerna": "4.0.0",
     "lint-staged": "^11.1.1",
     "nodemon": "^2.0.12",
