--- a/packages/feeds/package.json
+++ b/packages/feeds/package.json
@@ -13,13 +13,15 @@
   "scripts": {
     "build": "rm -rf lib && babel --root-mode upward src -d lib --ignore lib/**,**/*.spec.js",
     "watch": "yarn build -w",
-	"test:watch": "jest --watch",
+    "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --maxWorkers 4",
-	"test": "yarn test:coverage"
+    "test": "yarn test:coverage"
   },
   "dependencies": {
     "capitalize": "^2.0.3",
+    "faye": "^1.4.0",
     "graphql-compose": "^9.0.2",
+    "graphql-subscriptions": "^1.2.1",
     "lodash.castarray": "^4.4.0"
   }
 }
