--- a/examples/apollo-server/package.json
+++ b/examples/apollo-server/package.json
@@ -8,6 +8,8 @@
 		"start": "node --experimental-specifier-resolution=node main.js"
 	},
 	"dependencies": {
-		"apollo-server": "^3.1.1"
+		"apollo-server": "^3.1.1",
+		"apollo-server-express": "^3.3.0",
+		"subscriptions-transport-ws": "^0.9.19"
 	}
 }
