--- a/examples/full-example/package.json
+++ b/examples/full-example/package.json
@@ -11,8 +11,10 @@
 	"dependencies": {
 		"apollo-server": "^3.1.1",
 		"apollo-server-express": "^3.3.0",
+		"bcrypt": "^5.0.1",
 		"dotenv": "^10.0.0",
 		"graphql-compose-mongoose": "^9.6.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.0.4",
 		"mongoose-bcrypt": "^1.9.0",
 		"subscriptions-transport-ws": "^0.9.19"
