--- a/package.json
+++ b/package.json
@@ -14,17 +14,24 @@
     "build:clean": "lerna exec --parallel -- rm -rf lib",
     "dev:apollo-server": "yarn workspace @examples/apollo-server dev",
     "dev": "yarn workspace @examples/full-example dev",
+	"lint": "lerna exec --parallel -- eslint",
     "test": "lerna --scope @stream-io/* exec --parallel -- yarn test"
+  },
+  "lint-staged": {
+    "packages/**/*.{ts,js,json,md}": [
+      "prettier --write",
+	  "yarn lint"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.14.8",
+    "@babel/eslint-parser": "^7.15.4",
     "@babel/node": "^7.14.7",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
     "apollo-server": "^3.1.1",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-optional-chaining": "^7.0.0-beta.3",
