--- a/packages/feeds/package.json
+++ b/packages/feeds/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "@stream-io/graphql-feeds",
-  "description": "GraphQL Wrapper for the Stream Feeds JS SDK for Node. See README for details, roadmap, how-to's, etc.",
-  "version": "1.0.0-beta.1",
-  "main": "lib/index.js",
-  "module": "src/index.js",
-  "repository": {
-    "url": "https://github.com/LukeSmetham/graphql-stream.git",
-    "directory": "packages/feeds-compose"
-  },
-  "author": "Luke Smetham <luke@smetham.dev>",
-  "license": "MIT",
-  "scripts": {
-    "build": "rm -rf lib && babel --root-mode upward src -d lib --ignore lib/**,**/*.spec.js",
-    "watch": "yarn build -w",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --maxWorkers 4",
-    "test": "yarn test:coverage"
-  },
-  "dependencies": {
-    "capitalize": "^2.0.3",
-    "faye": "^1.4.0",
-    "graphql-compose": "^9.0.2",
-    "graphql-subscriptions": "^1.2.1",
-    "lodash.castarray": "^4.4.0"
-  }
+    "name": "@stream-io/graphql-feeds",
+    "description": "GraphQL Wrapper for the Stream Feeds JS SDK for Node. See README for details, roadmap, how-to's, etc.",
+    "version": "1.0.0-beta.1",
+    "main": "lib/index.js",
+    "module": "src/index.js",
+    "repository": {
+        "url": "https://github.com/LukeSmetham/graphql-stream.git",
+        "directory": "packages/feeds-compose"
+    },
+    "author": "Luke Smetham <luke@smetham.dev>",
+    "license": "MIT",
+    "scripts": {
+        "build": "rm -rf lib && babel --root-mode upward src -d lib --ignore lib/**,**/*.spec.js,__mocks__/**",
+        "watch": "yarn build -w",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage --maxWorkers 4",
+        "test": "yarn test:coverage"
+    },
+    "dependencies": {
+        "capitalize": "^2.0.3",
+        "faye": "^1.4.0",
+        "graphql-scalars": "^1.10.0",
+        "graphql-subscriptions": "^1.2.1",
+        "lodash.castarray": "^4.4.0",
+        "phin": "^3.6.0"
+    },
+    "peerDependencies": {
+        "graphql": "^15.5.1",
+        "graphql-compose": "^9.0.2"
+    }
 }
