--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "watch": "lerna --scope @stream-io/* exec --parallel -- yarn watch",
     "build:clean": "lerna exec --parallel -- rm -rf lib",
     "dev:apollo-server": "yarn workspace @examples/apollo-server dev",
-    "dev": "yarn workspace @examples/full-example dev",
+    "dev:full-example": "yarn workspace @examples/full-example dev",
+    "dev:token-server": "yarn workspace @examples/simple-token-server dev",
     "lint": "yarn eslint --fix",
     "test": "lerna --scope @stream-io/* exec --parallel -- yarn test"
   },
