--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-optional-chaining": "^7.0.0-beta.3",
+    "babel-preset-minify": "^0.5.1",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-get-off-my-lawn": "^6.0.1",
