--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "watch": "lerna --scope @stream-io/* exec --parallel -- yarn watch",
     "build:clean": "lerna exec --parallel -- rm -rf lib",
     "dev:apollo-server": "yarn workspace @examples/apollo-server dev",
+    "dev:full-schema": "yarn workspace @examples/full-schema dev",
     "dev:twitter-clone": "yarn workspace @examples/twitter-clone dev",
     "dev:token-server": "yarn workspace @examples/simple-token-server dev",
     "lint": "yarn eslint --fix",
